--- a/spotlight-react/package.json
+++ b/spotlight-react/package.json
@@ -6,6 +6,8 @@
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
     "apollo-boost": "^0.1.27",
+    "apollo-client": "^2.4.12",
+    "apollo-link-rest": "^0.7.0",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -32,6 +34,7 @@
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
     "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
@@ -52,6 +55,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-particles-js": "^2.4.2",
     "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
